--- a/zmq-sys/Cargo.toml
+++ b/zmq-sys/Cargo.toml
@@ -20,7 +20,7 @@ libc = "0.2.15"
 
 [build-dependencies]
 system-deps = "6"
-zeromq-src = { version = "0.2.1" }
+zeromq-src = { git = "https://github.com/polun-lai/zeromq-src-rs.git", branch = "fix_gcc_55" }
 
 [package.metadata.system-deps]
 libzmq = "4.1"
